Fix stepper issues
* Mobile stepper cannot scroll
* Stepper appear behind some elements

--- a/src/src/components/stepper/index.scss
+++ b/src/src/components/stepper/index.scss
@@ -9,6 +9,7 @@ $transition-style: linear;
     flex-direction: column;
     gap: $normal-gap;
     user-select: none;
+    z-index: 10;
 
     @media (max-width: $desktop) {
         top: 0px;
